调整一些配置和脚本

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 USER=root
 PASSWORD=openIM123
-MINIO_ENDPOINT=http://127.0.0.1:10005
-DATA_DIR=./
+MINIO_ENDPOINT=http://127.0.0.1:39005
+DATA_DIR=/Users/loong/data/open-im-server
