--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,13 +6,13 @@ serverversion: 2.3.1
 #---------------Infrastructure configuration---------------------#
 etcd:
   etcdSchema: openim  #默认即可
-  etcdAddr: [ 127.0.0.1:2379 ] #单机部署时，默认即可
+  etcdAddr: [ etcd:2379 ] #单机部署时，默认即可
   userName:
   password:
   secret:
 
 mysql:
-  dbMysqlAddress: [ 127.0.0.1:13306 ] #mysql地址 目前仅支持单机，默认即可
+  dbMysqlAddress: [ mysql:3306 ] #mysql地址 目前仅支持单机，默认即可
   dbMysqlUserName:  #mysql用户名，建议修改
   dbMysqlPassword:  # mysql密码，建议修改
   dbMysqlDatabaseName: openIM_v2 #默认即可
@@ -27,7 +27,7 @@ mysql:
 mongo:
   dbUri: ""#当dbUri值不为空则直接使用该值
   #dbAddress: 127.0.0.1:37017  #单机时为mongo地址，使用分片集群时，为mongos地址 默认即可
-  dbAddress: [ 127.0.0.1:37017 ]  #单机时为mongo地址，使用分片集群时，为mongos地址 默认即可
+  dbAddress: [ mongo:27017 ]  #单机时为mongo地址，使用分片集群时，为mongos地址 默认即可
   dbDirect: false
   dbTimeout: 60
   dbDatabase: openIM  #mongo db 默认即可
@@ -39,7 +39,7 @@ mongo:
   chatRecordsClearTime: "0 3 * * *" # 每天凌晨3点清除消息，该配置和linux定时任务一样， 清理操作建议设置在用户活跃少的时候 # 0 3 * * *
 
 redis:
-  dbAddress: [ 127.0.0.1:16379 ] #redis地址 单机时，填写一个地址即可，使用redis集群时候，填写集群中多个节点地址（主从地址都可以填写，增加容灾能力），默认即可
+  dbAddress: [ redis:6379 ] #redis地址 单机时，填写一个地址即可，使用redis集群时候，填写集群中多个节点地址（主从地址都可以填写，增加容灾能力），默认即可
   dbMaxIdle: 128
   dbMaxActive: 0
   dbIdleTimeout: 120
@@ -51,19 +51,19 @@ kafka:
   SASLUserName: 
   SASLPassword:
   ws2mschat:
-    addr: [ 127.0.0.1:9092 ] #kafka配置，默认即可
+    addr: [ kafka:9092 ] #kafka配置，默认即可
     topic: "ws2ms_chat" #用于mongo和mysql保存消息
 #  ws2mschatoffline:
-#    addr: [ 127.0.0.1:9092 ] #kafka配置，默认即可
+#    addr: [ kafka:9092 ] #kafka配置，默认即可
 #    topic: "ws2ms_chat_offline" #原为离线用户消息处理，目前暂时弃用
   msgtomongo:
-    addr: [ 127.0.0.1:9092 ] #kafka配置，默认即可
+    addr: [ kafka:9092 ] #kafka配置，默认即可
     topic: "msg_to_mongo"
   ms2pschat:
-    addr: [ 127.0.0.1:9092 ] #kafka配置，默认即可
+    addr: [ kafka:9092 ] #kafka配置，默认即可
     topic: "ms2ps_chat" #消息push
   msgtomodify:
-    addr: [ 127.0.0.1:9092 ] #kafka配置，默认即可
+    addr: [ kafka:9092 ] #kafka配置，默认即可
     topic: "msg_to_modify"
   consumergroupid:
     msgToTransfer: mongo
