--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,15 +24,15 @@ services:
       - ${DATA_DIR}/components/mongodb/data/db:/data/db
       - ${DATA_DIR}/components/mongodb/data/logs:/data/logs
       - ${DATA_DIR}/components/mongodb/data/conf:/etc/mongo
-      - ./script/mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro 
+      - ./script/mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
     environment:
       - TZ=Asia/Shanghai
       # cache
       - wiredTigerCacheSizeGB=1
-      - MONGO_INITDB_ROOT_USERNAME=${USER}
+      - MONGO_INITDB_ROOT_USERNAME=openIM
       - MONGO_INITDB_ROOT_PASSWORD=${PASSWORD}
       - MONGO_INITDB_DATABASE=openIM
-      - MONGO_USERNAME=${USER}
+      - MONGO_USERNAME=
       - MONGO_PASSWORD=${PASSWORD}
     #
     restart: always
@@ -77,7 +77,7 @@ services:
       KAFKA_BROKER_ID: 0
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "ws2ms_chat:8:1,ms2ps_chat:8:1,msg_to_mongo:8:1"
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://127.0.0.1:9092,OUTSIDE://103.116.45.174:9092
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://103.116.45.174:9092
       KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT"
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
@@ -105,8 +105,8 @@ services:
       - 9090:9090
     container_name: minio
     volumes:
-      - /mnt/data:/data
-      - /mnt/config:/root/.minio
+      - /Users/loong/data/mnt/data:/data
+      - /Users/loong/data/mnt/config:/root/.minio
     environment:
       MINIO_ROOT_USER: ${USER}
       MINIO_ROOT_PASSWORD: ${PASSWORD}
@@ -115,7 +115,9 @@ services:
 
 
   open_im_server:
-    image: openim/open_im_server:v2.3.8
+#    image: openim/open_im_server:v2.3.8
+#    image: openim/open_im_server:latest
+    image: open-im-srv-long
     container_name: open_im_server
     volumes:
       - ./logs:/Open-IM-Server/logs
@@ -123,6 +125,8 @@ services:
       - ./config/usualConfig.yaml:/Open-IM-Server/config/usualConfig.yaml
       - ${DATA_DIR}/db/sdk:/Open-IM-Server/db/sdk
       - ./script:/Open-IM-Server/script
+      - ./cmd:/Open-IM-Server/cmd
+      - ./bin2:/Open-IM-Server/bin2
     restart: always
     depends_on:
       - kafka
@@ -131,35 +135,40 @@ services:
       - redis
       - etcd
       - minio
-    network_mode: "host"
+    #    network_mode: "host"
     logging:
       driver: json-file
       options:
         max-size: "1g"
         max-file: "2"
+    ports:
+      - 10001:10001
+      - 10002:10002
+      - 10003:10003
+      - 10004:10004
 
-  open_im_enterprise:
-    image: openim/open_im_enterprise:v1.0.3
-    container_name: open_im_enterprise
-    volumes:
-      - ./logs:/Open-IM-Enterprise/logs
-      - ./docker-compose_cfg/config.yaml:/Open-IM-Enterprise/config/config.yaml
-    restart: always
-    depends_on:
-      - mysql
-      - mongodb
-      - redis
-      - etcd
-      - minio
-      - open_im_server
-    network_mode: "host"
-    logging:
-      driver: json-file
-      options:
-        max-size: "1g"
-        max-file: "2"
-    environment:
-      CONFIG_NAME: "/Open-IM-Enterprise"
+  #  open_im_enterprise:
+  #    image: openim/open_im_enterprise:v1.0.3
+  #    container_name: open_im_enterprise
+  #    volumes:
+  #      - ./logs:/Open-IM-Enterprise/logs
+  #      - ./docker-compose_cfg/config.yaml:/Open-IM-Enterprise/config/config.yaml
+  #    restart: always
+  #    depends_on:
+  #      - mysql
+  #      - mongodb
+  #      - redis
+  #      - etcd
+  #      - minio
+  #      - open_im_server
+  #    network_mode: "host"
+  #    logging:
+  #      driver: json-file
+  #      options:
+  #        max-size: "1g"
+  #        max-file: "2"
+  #    environment:
+  #      CONFIG_NAME: "/Open-IM-Enterprise"
 
   prometheus:
     image: prom/prometheus
@@ -169,24 +178,24 @@ services:
     #    ports:
     #    - 9091:9091
     depends_on:
-    - open_im_server
+      - open_im_server
     command: --web.listen-address=:9091 --config.file="/etc/prometheus/prometheus.yml"
-    network_mode: "host" 
+  #    network_mode: "host"
 
   grafana:
     image: grafana/grafana
     volumes:
-    # - ./grafana/dashboards/dashboard.json:/var/lib/grafana/dashboards/dashboard.json
-    # - ./grafana/provisioning/dashboard.yaml:/etc/grafana/provisioning/dashboards/dashboard.yaml
-    - ./docker-compose_cfg/datasource-compose.yaml:/etc/grafana/provisioning/datasources/datasource.yaml
-    - ./docker-compose_cfg/grafana.ini:/etc/grafana/grafana.ini
-    - ./docker-compose_cfg/node-exporter-full_rev1.json:/var/lib/grafana/dashboards/node-exporter-full_rev1.json
+      # - ./grafana/dashboards/dashboard.json:/var/lib/grafana/dashboards/dashboard.json
+      # - ./grafana/provisioning/dashboard.yaml:/etc/grafana/provisioning/dashboards/dashboard.yaml
+      - ./docker-compose_cfg/datasource-compose.yaml:/etc/grafana/provisioning/datasources/datasource.yaml
+      - ./docker-compose_cfg/grafana.ini:/etc/grafana/grafana.ini
+      - ./docker-compose_cfg/node-exporter-full_rev1.json:/var/lib/grafana/dashboards/node-exporter-full_rev1.json
     container_name: grafana
-    #    ports:
-    #    - 10007:10007
+    ports:
+      - 10007:10007
     depends_on:
-    - prometheus
-    network_mode: "host" 
+      - prometheus
+  #    network_mode: "host"
 
   node-exporter:
     image: quay.io/prometheus/node-exporter
