--- a/config/config.yaml
+++ b/config/config.yaml
@@ -777,11 +777,17 @@ demo:
     secretKey:
     signName:
     verificationCodeTemplateCode:
+    enable: false
+  netEaseSMS: #腾讯云短信配置，在腾讯云申请成功后，修改以下选项，enable为true则必须修改
+    secretID: "96cae66f07870b6650a569eab348638b"
+    secretKey: "772af8c0409d245c5d83c8b0566f6703"
+    businessID: "209c3d08d71d44a6853a3d7ec518d3e6"
+    verificationCodeTemplateCode: ""
     enable: true
-  superCode: 666666 #超级验证码，建议修改掉，收不到短信验证码时可以用此替代
+  superCode: 888888 #超级验证码，建议修改掉，收不到短信验证码时可以用此替代
   needInvitationCode: false
   #  second
-  codeTTL: 60
+  codeTTL: 600
   useSuperCode: true
   mail: #仅支持qq邮箱，具体操作参考 https://service.mail.qq.com/cgi-bin/help?subtype=1&id=28&no=1001256 必须修改
     title:
