--- a/cmd/city-chat/Makefile
+++ b/cmd/city-chat/Makefile
@@ -7,7 +7,7 @@ BIN_DIR=../../bin/
 all: gotool build
 
 build:
-	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s"
+	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ${BINARY_NAME} -ldflags="-w -s"
 
 run:
 	@go run ./
